OC2 = OpenCart 2 (OC21, OC22, OC23 = specifieke minor versie binnen major versie 2)
OC3 = OpenCart 3
PS  = PrestaShop
VM3 = VirtueMart3 (Joomla)
WC  = WooCommerce (WordPress) (alle ondersteunde versies, vanaf 5.5.2 is dat alleen nog WC3)
WC2 = WooCommerce 2 (WordPress)
WC3 = WooCommerce 3 (WordPress)

5.7.1 (2019-04-23)
------------------
Bugs:
- WC: tweaked the precision settings again.

Refactorings:
- ALL: Number::getDivisionRange(): all parameters are now obligatory.

5.7.0 (2019-04-03)
------------------
Features:
- ALL: Prevent sending an invoice twice at the same moment. Some online payment
  methods can trigger multiple status updates within a short time interval,
  possibly triggering sending the invoice a 2nd time while the 1st is still
  being executed. We are adding measures to prevent and, if it still occurs,
  recognise this situation, so we can warn about it.

Refactorings:
- Renamed Result::Sent_... constants to Result::Send_.

5.6.1 (2019-04-01)
------------------
Bugs:
- ALL: Facturen voor klanten buiten de EU waar gewoon btw wordt geheven kregen
  niet factuurtype 1 toegewezen.
- MA: kolom 'updated' van tabel 'acumulus_entry' kreeg geen waarde. Niet bij
  toevoegen en niet bij updaten.

Features:
- WC: Added more support for WC_Bookings (resource info is now available).
- MA1: Support for betaalkosten van de MultiSafePay.com module toegevoegd.
- ALL: Recalculate unitpriceinc to get accurate line totals.
- WC/MA/PS: (These are the web shops that do support credit notes.): "Property
  source" 'originalInvoiceOrder' in ere hersteld. Deze info is af en toe toch
  nodig. Deze property verwijst nu naar de Acumulus wrapper om de
  (oorspronkelijke) order heen. NB: deze property bestaat alleen in shops die
  creditfacturen ondersteunen.
- WC/MA/PS: (These are the web shops that do support credit notes.): "Property
  sources" 'refundedInvoceSource' en 'refundedOrder' toegevoegd. In
  tegenstelling tot de property sources 'originalInvouiceSource' en